<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iceoryx_systemtest</name>
  <version>0.1.0</version>
  <description>Iceoryx systemtest</description>
  <maintainer email="dietrich.kroenke@apex.ai">Dietrich Krönke</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>iceoryx_posh</build_depend>
  <build_depend>iceoryx_binding_c</build_depend>
  <build_depend>iceoryx_introspection</build_depend>
  <build_depend>ros_testing</build_depend>

  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
